# vk_ray3d

./: .gitignore  Cargo.toml  README.md
STL/: ground.stl  monkey.stl  pyramid.stl
compute_vk/: Cargo.toml
compute_vk/src/: canvas.rs  lib.rs  loader.rs  util.rs
shader/: consts.glsl  light.glsl  model.glsl  quaternion.glsl  ray3d.glsl  sphere.glsl
src/: camera.rs  geom.rs  light.rs  main.rs  quaternion.rs  ray.rs  texture.rs
tobj-master/src/: lib.rs
