[package]
name = "compute_vk"
version = "0.1.0"
authors = ["Valink16 <valuthyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.22.0"
vulkano-win = "0.22.0"
winit = "0.24.0"
shaderc = "0.7.2"
relative-path = "1.3.2"
